# chip8-rust

./: Cargo.toml  README.md
src/: 1q  chip.rs  main.rs  sound.rs
