[package]
name = "chip8-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
raylib = {version = "3.7"}
text_io = "0.1.9"
anyhow = "1.0"
rodio = "0.14.0"
logger = "0.4.0"
env_logger = "0.10.0"
log = "0.4.20"
druid = "0.8.3"
glium = "0.32.1"
imgui-glium-renderer = "0.11.0"
imgui = "0.11.0"
imgui-winit-support = "0.11.0"
